Transitioning Unregistered Custom Properties cause a transition loop https://bugs.webkit.org/show_bug.cgi?id=279012

Reviewed by Antti Koivisto.

There is no need to have special logic in `CSSPropertyAnimation::propertiesEqual()` to deal with the
various value variants held by `CSSCustomPropertyValue` since `CSSCustomPropertyValue::equals()`
already checks the two values have the same type and then performs the equality check. This will allow
variant types not previously explicitly tested by `CSSPropertyAnimation::propertiesEqual()` to be tested,
such as unregistered properties that have no explicit value type.

* LayoutTests/imported/w3c/web-platform-tests/css/css-transitions/custom-property-and-allow-discrete-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-transitions/custom-property-and-allow-discrete.html: Added.
* Source/WebCore/animation/CSSPropertyAnimation.cpp:
(WebCore::CSSPropertyAnimation::propertiesEqual):

Canonical link: https://commits.webkit.org/283099@main